--- a/style.css
+++ b/style.css
@@ -41,15 +41,15 @@ margin-top: 200px;
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto;
   padding: 10px;
 
 
 }
 
 .container {
-	min-width: 170px;
-	min-height: 170px;
+	min-width: 140px;
+	min-height: 140px;
 	border-radius: 15px;
 	position: relative;
 	-webkit-transition: 1.5s ease-in-out;
@@ -60,6 +60,21 @@ margin-top: 200px;
 
 	
 }
+.container2 {
+	min-width: 140px;
+	min-height: 140px;
+	border-radius: 15px;
+	position: relative;
+	-webkit-transition: 1.5s ease-in-out;
+	transition: 1.5s ease-in-out;
+	transform-style: preserve-3d;
+	margin: 10px;
+	text-align: center;
+	top: 25%;
+
+	
+}
+
 
 .side {
 	position: absolute;
@@ -110,7 +125,7 @@ margin-top: 200px;
 	background-size: cover;
 	background-image: radial-gradient(circle, rgb(251, 63, 63) 0%, rgb(135, 38, 38) 100%);
 	text-align: center !important;
-	font-size: 15px !important;
+	font-size: 13px !important;
 	
 	
 }
@@ -129,6 +144,7 @@ margin-top: 200px;
 	background-size: cover;
 	background-image: radial-gradient(circle, rgb(142, 251, 63) 0%, rgb(52, 171, 47) 100%);
 	text-align: center;
+	font-size: 13px !important;
 }
 .back {
 	background-color: #333;
@@ -193,4 +209,3 @@ form input[type="submit"] {
 	background-color: #fff;
 	color: #122;
 }
-
