--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ margin-top: 200px;
 	background-image: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(209, 209, 209) 100%);
 	color: #111;
 }
-.container:hover {
+.container.flipped {
 	-webkit-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 }
