--- a/public/admin.css
+++ b/public/admin.css
@@ -1,8 +1,16 @@
 body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
+    body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 20px;
+            background-color: #f0f0f0;
+    background-size: cover; /* Dodane */
+    background-position: center; /* Dodane */
+        overflow-y: hidden; /* Dodane */
+    overflow-x: auto; /* Dodane */
 }
 
 .quill-editor {
